feat(reparation): ajout point api + model
